--- a/FIT5032_MyCSS_Studio2/FIT5032_MyCSS_Studio2.csproj
+++ b/FIT5032_MyCSS_Studio2/FIT5032_MyCSS_Studio2.csproj
@@ -210,6 +210,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\contact_style.css" />
     <Content Include="Content\my_style.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
